@@ -21,6 +21,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.util;
 
 import com.infradna.tool.bridge_method_injector.WithBridgeMethods;
@@ -38,10 +39,7 @@ import java.io.UncheckedIOException;
 import java.lang.reflect.InvocationTargetException;
 import java.util.AbstractList;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
@@ -105,7 +103,7 @@ public class PersistedList<T> extends AbstractList<T> {
 
     public <U extends T> U get(Class<U> type) {
         for (T t : data)
-            if(type.isInstance(t))
+            if (type.isInstance(t))
                 return type.cast(t);
         return null;
     }
@@ -116,7 +114,7 @@ public class PersistedList<T> extends AbstractList<T> {
     public <U extends T> List<U> getAll(Class<U> type) {
         List<U> r = new ArrayList<>();
         for (T t : data)
-            if(type.isInstance(t))
+            if (type.isInstance(t))
                 r.add(type.cast(t));
         return r;
     }
@@ -131,7 +129,7 @@ public class PersistedList<T> extends AbstractList<T> {
      */
     public void remove(Class<? extends T> type) throws IOException {
         for (T t : data) {
-            if(t.getClass()==type) {
+            if (t.getClass() == type) {
                 data.remove(t);
                 onModified();
                 return;
@@ -147,29 +145,29 @@ public class PersistedList<T> extends AbstractList<T> {
      */
     public void replace(T from, T to) throws IOException {
         List<T> copy = new ArrayList<>(data.getView());
-        for (int i=0; i<copy.size(); i++) {
+        for (int i = 0; i < copy.size(); i++) {
             if (copy.get(i).equals(from))
-                copy.set(i,to);
+                copy.set(i, to);
         }
         data.replaceBy(copy);
     }
 
     @Override
     public boolean remove(Object o) {
-        boolean b = data.remove((T)o);
+        boolean b = data.remove((T) o);
         if (b)  _onModified();
         return b;
     }
 
     public void removeAll(Class<? extends T> type) throws IOException {
-        boolean modified=false;
+        boolean modified = false;
         for (T t : data) {
-            if(t.getClass()==type) {
+            if (t.getClass() == type) {
                 data.remove(t);
-                modified=true;
+                modified = true;
             }
         }
-        if(modified)
+        if (modified)
             onModified();
     }
 
@@ -201,8 +199,9 @@ public class PersistedList<T> extends AbstractList<T> {
     }
 
     // TODO until https://github.com/jenkinsci/jenkins-test-harness/pull/243 is widely adopted:
-    private static final Set<String> IGNORED_CLASSES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("org.jvnet.hudson.test.TestBuilder", "org.jvnet.hudson.test.TestNotifier")));
+    private static final Set<String> IGNORED_CLASSES = Set.of("org.jvnet.hudson.test.TestBuilder", "org.jvnet.hudson.test.TestNotifier");
     // (SingleFileSCM & ExtractResourceWithChangesSCM would also be nice to suppress, but they are not kept in a PersistedList.)
+
     private static boolean ignoreSerializationErrors(Object o) {
         if (o != null) {
             for (Class<?> c = o.getClass(); c != Object.class; c = c.getSuperclass()) {
@@ -288,7 +287,7 @@ public class PersistedList<T> extends AbstractList<T> {
             CopyOnWriteList core = copyOnWriteListConverter.unmarshal(reader, context);
 
             try {
-                PersistedList r = (PersistedList)context.getRequiredType().getDeclaredConstructor().newInstance();
+                PersistedList r = (PersistedList) context.getRequiredType().getDeclaredConstructor().newInstance();
                 r.data.replaceBy(core);
                 return r;
             } catch (NoSuchMethodException e) {
