@@ -21,13 +21,14 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package jenkins.model;
 
 import hudson.Extension;
 import hudson.ExtensionList;
 import hudson.util.DescribableList;
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import net.sf.json.JSONObject;
 import org.jenkinsci.Symbol;
 import org.kohsuke.accmod.Restricted;
@@ -52,7 +53,7 @@ public class GlobalBuildDiscarderConfiguration extends GlobalConfiguration {
     }
 
     private final DescribableList<GlobalBuildDiscarderStrategy, GlobalBuildDiscarderStrategyDescriptor> configuredBuildDiscarders =
-            new DescribableList<>(this, Collections.singletonList(new JobGlobalBuildDiscarderStrategy()));
+            new DescribableList<>(this, List.of(new JobGlobalBuildDiscarderStrategy()));
 
     private Object readResolve() {
         configuredBuildDiscarders.setOwner(this);
