@@ -29,6 +29,7 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
+import static org.junit.Assume.assumeFalse;
 
 import hudson.model.StreamBuildListener;
 import hudson.model.TaskListener;
@@ -37,9 +38,8 @@ import hudson.util.StreamTaskListener;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
 import jenkins.security.MasterToSlaveCallable;
-import org.apache.commons.io.FileUtils;
-import org.junit.Assume;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
@@ -52,13 +52,13 @@ public class LauncherTest {
 
     @Issue("JENKINS-4611")
     @Test public void remoteKill() throws Exception {
-        Assume.assumeFalse("Skipping, currently Unix-specific test", Functions.isWindows());
+        assumeFalse(Functions.isWindows());
 
         File tmp = temp.newFile();
 
             FilePath f = new FilePath(channels.french, tmp.getPath());
             Launcher l = f.createLauncher(StreamTaskListener.fromStderr());
-            Proc p = l.launch().cmds("sh", "-c", "echo $$$$ > "+tmp+"; sleep 30").stdout(System.out).stderr(System.err).start();
+            Proc p = l.launch().cmds("sh", "-c", "echo $$$$ > " + tmp + "; sleep 30").stdout(System.out).stderr(System.err).start();
             while (!tmp.exists())
                 Thread.sleep(100);
             long start = System.currentTimeMillis();
@@ -69,7 +69,7 @@ public class LauncherTest {
             assertTrue("Join did not finish promptly. The completion time (" + terminationTime + "ms) is longer than expected 15s", terminationTime < 15000);
             channels.french.call(new NoopCallable()); // this only returns after the other side of the channel has finished executing cancellation
             Thread.sleep(2000); // more delay to make sure it's gone
-            assertNull("process should be gone",ProcessTree.get().get(Integer.parseInt(FileUtils.readFileToString(tmp, Charset.defaultCharset()).trim())));
+            assertNull("process should be gone", ProcessTree.get().get(Integer.parseInt(Files.readString(tmp.toPath(), Charset.defaultCharset()).trim())));
 
             // Manual version of test: set up instance w/ one agent. Now in script console
             // new hudson.FilePath(new java.io.File("/tmp")).createLauncher(new hudson.util.StreamTaskListener(System.err)).
@@ -80,7 +80,7 @@ public class LauncherTest {
             // hangs and on agent machine pgrep sleep => one process; after manual kill, script returns.
     }
 
-    private static class NoopCallable extends MasterToSlaveCallable<Object,RuntimeException> {
+    private static class NoopCallable extends MasterToSlaveCallable<Object, RuntimeException> {
         @Override
         public Object call() throws RuntimeException {
             return null;
@@ -90,12 +90,12 @@ public class LauncherTest {
     @Issue("JENKINS-15733")
     @Test public void decorateByEnv() throws Exception {
         ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        TaskListener l = new StreamBuildListener(baos);
+        TaskListener l = new StreamBuildListener(baos, Charset.defaultCharset());
         Launcher base = new Launcher.LocalLauncher(l);
         EnvVars env = new EnvVars("key1", "val1");
         Launcher decorated = base.decorateByEnv(env);
         int res = decorated.launch().envs("key2=val2").cmds(Functions.isWindows() ? new String[] {"cmd", "/q", "/c", "echo %key1% %key2%"} : new String[] {"sh", "-c", "echo $key1 $key2"}).stdout(l).join();
-        String log = baos.toString();
+        String log = baos.toString(Charset.defaultCharset());
         assertEquals(log, 0, res);
         assertTrue(log, log.contains("val1 val2"));
     }
@@ -103,7 +103,7 @@ public class LauncherTest {
     @Issue("JENKINS-18368")
     @Test public void decoratedByEnvMaintainsIsUnix() {
         ByteArrayOutputStream output = new ByteArrayOutputStream();
-        TaskListener listener = new StreamBuildListener(output);
+        TaskListener listener = new StreamBuildListener(output, Charset.defaultCharset());
         Launcher remoteLauncher = new Launcher.RemoteLauncher(listener, FilePath.localChannel, false);
         Launcher decorated = remoteLauncher.decorateByEnv(new EnvVars());
         assertFalse(decorated.isUnix());
@@ -115,7 +115,7 @@ public class LauncherTest {
     @Issue("JENKINS-18368")
     @Test public void decoratedByPrefixMaintainsIsUnix() {
         ByteArrayOutputStream output = new ByteArrayOutputStream();
-        TaskListener listener = new StreamBuildListener(output);
+        TaskListener listener = new StreamBuildListener(output, Charset.defaultCharset());
         Launcher remoteLauncher = new Launcher.RemoteLauncher(listener, FilePath.localChannel, false);
         Launcher decorated = remoteLauncher.decorateByPrefix("test");
         assertFalse(decorated.isUnix());
