@@ -36,6 +36,8 @@ import hudson.util.StreamTaskListener;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Map;
 import java.util.TimeZone;
 import java.util.TreeMap;
@@ -94,13 +96,36 @@ public class RunIdMigratorTest {
 
     @Test public void legacy() throws Exception {
         assumeFalse("Symlinks don't work well on Windows", Functions.isWindows());
-        write("2014-01-02_03-04-05/build.xml", "<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <number>99</number>\n  <otherstuff>ok</otherstuff>\n</run>");
+        write(
+                "2014-01-02_03-04-05/build.xml",
+                "<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <number>99</number>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>");
         link("99", "2014-01-02_03-04-05");
         link("lastFailedBuild", "-1");
         link("lastSuccessfulBuild", "99");
-        assertEquals("{2014-01-02_03-04-05={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <number>99</number>\n  <otherstuff>ok</otherstuff>\n</run>'}, 99=→2014-01-02_03-04-05, lastFailedBuild=→-1, lastSuccessfulBuild=→99}", summarize());
+        assertEquals(
+                "{2014-01-02_03-04-05={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <number>99</number>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}, 99=→2014-01-02_03-04-05, lastFailedBuild=→-1, lastSuccessfulBuild=→99}",
+                summarize());
         assertTrue(migrator.migrate(dir, null));
-        assertEquals("{99={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <id>2014-01-02_03-04-05</id>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>'}, lastFailedBuild=→-1, lastSuccessfulBuild=→99, legacyIds='2014-01-02_03-04-05 99\n'}", summarize());
+        assertEquals(
+                "{99={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <id>2014-01-02_03-04-05</id>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}, lastFailedBuild=→-1, lastSuccessfulBuild=→99, legacyIds='2014-01-02_03-04-05 99\n"
+                    + "'}",
+                summarize());
         assertEquals(99, migrator.findNumber("2014-01-02_03-04-05"));
         migrator = new RunIdMigrator();
         assertFalse(migrator.migrate(dir, null));
@@ -115,64 +140,180 @@ public class RunIdMigratorTest {
         assumeFalse("Symlinks don't work well on Windows", Functions.isWindows());
         write("2014-01-02_03-04-04/build.xml", "<run>\n  <number>98</number>\n</run>");
         link("98", "2014-01-02_03-04-04");
-        write("99/build.xml", "<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>");
+        write(
+                "99/build.xml",
+                "<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>");
         link("lastFailedBuild", "-1");
         link("lastSuccessfulBuild", "99");
-        assertEquals("{2014-01-02_03-04-04={build.xml='<run>\n  <number>98</number>\n</run>'}, 98=→2014-01-02_03-04-04, 99={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>'}, lastFailedBuild=→-1, lastSuccessfulBuild=→99}", summarize());
+        assertEquals(
+                "{2014-01-02_03-04-04={build.xml='<run>\n"
+                    + "  <number>98</number>\n"
+                    + "</run>'}, 98=→2014-01-02_03-04-04, 99={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}, lastFailedBuild=→-1, lastSuccessfulBuild=→99}",
+                summarize());
         assertTrue(migrator.migrate(dir, null));
-        assertEquals("{98={build.xml='<run>\n  <id>2014-01-02_03-04-04</id>\n  <timestamp>1388649844000</timestamp>\n</run>'}, 99={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>'}, lastFailedBuild=→-1, lastSuccessfulBuild=→99, legacyIds='2014-01-02_03-04-04 98\n'}", summarize());
+        assertEquals(
+                "{98={build.xml='<run>\n"
+                    + "  <id>2014-01-02_03-04-04</id>\n"
+                    + "  <timestamp>1388649844000</timestamp>\n"
+                    + "</run>'}, 99={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}, lastFailedBuild=→-1, lastSuccessfulBuild=→99, legacyIds='2014-01-02_03-04-04 98\n"
+                    + "'}",
+                summarize());
     }
 
     @Test public void reverseImmediately() throws Exception {
         assumeFalse("Symlinks don't work well on Windows", Functions.isWindows());
         File root = dir;
         dir = new File(dir, "jobs/somefolder/jobs/someproject/promotions/OK/builds");
-        write("99/build.xml", "<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <id>2014-01-02_03-04-05</id>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>");
+        write(
+                "99/build.xml",
+                "<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <id>2014-01-02_03-04-05</id>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>");
         link("lastFailedBuild", "-1");
         link("lastSuccessfulBuild", "99");
         write("legacyIds", "2014-01-02_03-04-05 99\n");
-        assertEquals("{99={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <id>2014-01-02_03-04-05</id>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>'}, lastFailedBuild=→-1, lastSuccessfulBuild=→99, legacyIds='2014-01-02_03-04-05 99\n'}", summarize());
+        assertEquals(
+                "{99={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <id>2014-01-02_03-04-05</id>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}, lastFailedBuild=→-1, lastSuccessfulBuild=→99, legacyIds='2014-01-02_03-04-05 99\n"
+                    + "'}",
+                summarize());
         RunIdMigrator.main(root.getAbsolutePath());
-        assertEquals("{2014-01-02_03-04-05={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <number>99</number>\n  <otherstuff>ok</otherstuff>\n</run>'}, 99=→2014-01-02_03-04-05, lastFailedBuild=→-1, lastSuccessfulBuild=→99}", summarize());
+        assertEquals(
+                "{2014-01-02_03-04-05={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <number>99</number>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}, 99=→2014-01-02_03-04-05, lastFailedBuild=→-1, lastSuccessfulBuild=→99}",
+                summarize());
     }
 
     @Test public void reverseAfterNewBuilds() throws Exception {
         assumeFalse("Symlinks don't work well on Windows", Functions.isWindows());
         File root = dir;
         dir = new File(dir, "jobs/someproject/modules/test$test/builds");
-        write("1/build.xml", "<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>");
+        write(
+                "1/build.xml",
+                "<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>");
         write("legacyIds", "");
-        assertEquals("{1={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>'}, legacyIds=''}", summarize());
+        assertEquals(
+                "{1={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}, legacyIds=''}",
+                summarize());
         RunIdMigrator.main(root.getAbsolutePath());
-        assertEquals("{1=→2014-01-02_03-04-05, 2014-01-02_03-04-05={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <number>1</number>\n  <otherstuff>ok</otherstuff>\n</run>'}}", summarize());
+        assertEquals(
+                "{1=→2014-01-02_03-04-05, 2014-01-02_03-04-05={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <number>1</number>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}}",
+                summarize());
     }
 
     @Test public void reverseMatrixAfterNewBuilds() throws Exception {
         assumeFalse("Symlinks don't work well on Windows", Functions.isWindows());
         File root = dir;
         dir = new File(dir, "jobs/someproject/Environment=prod/builds");
-        write("1/build.xml", "<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>");
+        write(
+                "1/build.xml",
+                "<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>");
         write("legacyIds", "");
-        assertEquals("{1={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>'}, legacyIds=''}", summarize());
+        assertEquals(
+                "{1={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}, legacyIds=''}",
+                summarize());
         RunIdMigrator.main(root.getAbsolutePath());
-        assertEquals("{1=→2014-01-02_03-04-05, 2014-01-02_03-04-05={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <number>1</number>\n  <otherstuff>ok</otherstuff>\n</run>'}}", summarize());
+        assertEquals(
+                "{1=→2014-01-02_03-04-05, 2014-01-02_03-04-05={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <number>1</number>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}}",
+                summarize());
     }
 
     @Test public void reverseMavenAfterNewBuilds() throws Exception {
         assumeFalse("Symlinks don't work well on Windows", Functions.isWindows());
         File root = dir;
         dir = new File(dir, "jobs/someproject/test$test/builds");
-        write("1/build.xml", "<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>");
+        write(
+                "1/build.xml",
+                "<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>");
         write("legacyIds", "");
-        assertEquals("{1={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <timestamp>1388649845000</timestamp>\n  <otherstuff>ok</otherstuff>\n</run>'}, legacyIds=''}", summarize());
+        assertEquals(
+                "{1={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <timestamp>1388649845000</timestamp>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}, legacyIds=''}",
+                summarize());
         RunIdMigrator.main(root.getAbsolutePath());
-        assertEquals("{1=→2014-01-02_03-04-05, 2014-01-02_03-04-05={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n<run>\n  <stuff>ok</stuff>\n  <number>1</number>\n  <otherstuff>ok</otherstuff>\n</run>'}}", summarize());
+        assertEquals(
+                "{1=→2014-01-02_03-04-05, 2014-01-02_03-04-05={build.xml='<?xml version='1.0' encoding='UTF-8'?>\n"
+                    + "<run>\n"
+                    + "  <stuff>ok</stuff>\n"
+                    + "  <number>1</number>\n"
+                    + "  <otherstuff>ok</otherstuff>\n"
+                    + "</run>'}}",
+                summarize());
     }
 
     // TODO test sane recovery from various error conditions
 
     private void write(String file, String text) throws Exception {
-        FileUtils.write(new File(dir, file), text, Charset.defaultCharset());
+        Path path = new File(dir, file).toPath();
+        Files.createDirectories(path.getParent());
+        Files.writeString(path, text, Charset.defaultCharset());
     }
 
     private void link(String symlink, String dest) throws Exception {
@@ -182,16 +323,17 @@ public class RunIdMigratorTest {
     private String summarize() throws Exception {
         return summarize(dir);
     }
+
     private static String summarize(File dir) throws Exception {
         File[] kids = dir.listFiles();
-        Map<String,String> m = new TreeMap<>();
+        Map<String, String> m = new TreeMap<>();
         for (File kid : kids) {
             String notation;
             String symlink = Util.resolveSymlink(kid);
             if (symlink != null) {
                 notation = "→" + symlink;
             } else if (kid.isFile()) {
-                notation = "'" + FileUtils.readFileToString(kid, Charset.defaultCharset()) + "'";
+                notation = "'" + Files.readString(kid.toPath(), Charset.defaultCharset()) + "'";
             } else if (kid.isDirectory()) {
                 notation = summarize(kid);
             } else {
