@@ -8,9 +8,9 @@ import hudson.model.utils.IOExceptionPublisher;
 import hudson.model.utils.ResultWriterPublisher;
 import hudson.model.utils.TrueFalsePublisher;
 import hudson.tasks.ArtifactArchiver;
-import java.io.File;
 import java.nio.charset.StandardCharsets;
-import org.apache.commons.io.FileUtils;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.Issue;
@@ -40,11 +40,10 @@ public class FreestyleJobPublisherTest {
         artifactArchiver.setOnlyIfSuccessful(false);
         p.getPublishersList().add(artifactArchiver); // transfer file to build dir
 
-        FreeStyleBuild b = p.scheduleBuild2(0).get();
-        assertEquals("Build must fail, because we used FalsePublisher", Result.FAILURE, b.getResult());
-        File file = new File(b.getArtifactsDir(), "result.txt");
-        assertTrue("ArtifactArchiver is executed even prior publisher fails", file.exists());
-        assertEquals("Publisher, after publisher with return false status, must see FAILURE status", FileUtils.readFileToString(file, StandardCharsets.UTF_8), Result.FAILURE.toString());
+        FreeStyleBuild b = j.buildAndAssertStatus(Result.FAILURE, p);
+        Path path = b.getArtifactsDir().toPath().resolve("result.txt");
+        assertTrue("ArtifactArchiver is executed even prior publisher fails", Files.exists(path));
+        assertEquals("Publisher, after publisher with return false status, must see FAILURE status", Files.readString(path, StandardCharsets.UTF_8), Result.FAILURE.toString());
     }
 
     /**
@@ -62,14 +61,13 @@ public class FreestyleJobPublisherTest {
         artifactArchiver.setOnlyIfSuccessful(false);
         p.getPublishersList().add(artifactArchiver); // transfer file to build dir
 
-        FreeStyleBuild b = p.scheduleBuild2(0).get();
+        FreeStyleBuild b = j.buildAndAssertStatus(Result.FAILURE, p);
 
-        assertEquals("Build must fail, because we used AbortExceptionPublisher", Result.FAILURE, b.getResult());
         j.assertLogNotContains("\tat", b); // log must not contain stacktrace
         j.assertLogContains("Threw AbortException from publisher!", b); // log must contain exact error message
-        File file = new File(b.getArtifactsDir(), "result.txt");
-        assertTrue("ArtifactArchiver is executed even prior publisher fails", file.exists());
-        assertEquals("Third publisher must see FAILURE status", FileUtils.readFileToString(file, StandardCharsets.UTF_8), Result.FAILURE.toString());
+        Path path = b.getArtifactsDir().toPath().resolve("result.txt");
+        assertTrue("ArtifactArchiver is executed even prior publisher fails", Files.exists(path));
+        assertEquals("Third publisher must see FAILURE status", Files.readString(path, StandardCharsets.UTF_8), Result.FAILURE.toString());
     }
 
     /**
@@ -87,13 +85,12 @@ public class FreestyleJobPublisherTest {
         artifactArchiver.setOnlyIfSuccessful(false);
         p.getPublishersList().add(artifactArchiver); // transfer file to build dir
 
-        FreeStyleBuild b = p.scheduleBuild2(0).get();
+        FreeStyleBuild b = j.buildAndAssertStatus(Result.FAILURE, p);
 
-        assertEquals("Build must fail, because we used FalsePublisher", Result.FAILURE, b.getResult());
         j.assertLogContains("\tat hudson.model.utils.IOExceptionPublisher", b); // log must contain stacktrace
         j.assertLogContains("Threw IOException from publisher!", b); // log must contain exact error message
-        File file = new File(b.getArtifactsDir(), "result.txt");
-        assertTrue("ArtifactArchiver is executed even prior publisher fails", file.exists());
-        assertEquals("Third publisher must see FAILURE status", FileUtils.readFileToString(file, StandardCharsets.UTF_8), Result.FAILURE.toString());
+        Path path = b.getArtifactsDir().toPath().resolve("result.txt");
+        assertTrue("ArtifactArchiver is executed even prior publisher fails", Files.exists(path));
+        assertEquals("Third publisher must see FAILURE status", Files.readString(path, StandardCharsets.UTF_8), Result.FAILURE.toString());
     }
 }
