@@ -21,6 +21,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -56,6 +57,7 @@ import com.gargoylesoftware.htmlunit.html.HtmlForm;
 import com.gargoylesoftware.htmlunit.html.HtmlFormUtil;
 import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import com.gargoylesoftware.htmlunit.xml.XmlPage;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.ExtensionList;
 import hudson.Functions;
 import hudson.Launcher;
@@ -102,6 +104,8 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -110,7 +114,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CancellationException;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 import java.util.concurrent.ScheduledThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
@@ -131,8 +134,6 @@ import org.acegisecurity.acls.sid.PrincipalSid;
 import org.apache.commons.fileupload.FileUploadException;
 import org.apache.commons.fileupload.disk.DiskFileItemFactory;
 import org.apache.commons.fileupload.servlet.ServletFileUpload;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.lang.StringUtils;
 import org.eclipse.jetty.server.Server;
 import org.eclipse.jetty.server.ServerConnector;
 import org.eclipse.jetty.servlet.ServletHandler;
@@ -174,21 +175,21 @@ public class QueueTest {
         r.jenkins.setNumExecutors(0);
 
         FreeStyleProject testProject = r.createFreeStyleProject("test");
-        testProject.scheduleBuild(new UserIdCause());
+        assertNotNull(testProject.scheduleBuild2(0, new UserIdCause()));
         q.save();
 
-        System.out.println(FileUtils.readFileToString(new File(r.jenkins.getRootDir(), "queue.xml")));
+        System.out.println(Files.readString(r.jenkins.getRootDir().toPath().resolve("queue.xml"), StandardCharsets.UTF_8));
 
         assertEquals(1, q.getItems().length);
         q.clear();
-        assertEquals(0,q.getItems().length);
+        assertEquals(0, q.getItems().length);
 
         // load the contents back
         q.load();
         assertEquals(1, q.getItems().length);
 
         // did it bind back to the same object?
-        assertSame(q.getItems()[0].task,testProject);
+        assertSame(q.getItems()[0].task, testProject);
     }
 
     /**
@@ -197,7 +198,7 @@ public class QueueTest {
      */
     @LocalData
     @Test
-    public void recover_from_legacy_list() throws Exception {
+    public void recover_from_legacy_list() {
         Queue q = r.jenkins.getQueue();
 
         // loaded the legacy queue.xml from test LocalData located in
@@ -222,19 +223,19 @@ public class QueueTest {
         r.jenkins.setNumExecutors(0);
 
         FreeStyleProject testProject = r.createFreeStyleProject("test");
-        testProject.scheduleBuild(new UserIdCause());
+        assertNotNull(testProject.scheduleBuild2(0, new UserIdCause()));
         q.save();
 
-        System.out.println(FileUtils.readFileToString(new File(r.jenkins.getRootDir(), "queue.xml")));
+        System.out.println(Files.readString(r.jenkins.getRootDir().toPath().resolve("queue.xml"), StandardCharsets.UTF_8));
 
         assertEquals(1, q.getItems().length);
         q.clear();
-        assertEquals(0,q.getItems().length);
+        assertEquals(0, q.getItems().length);
 
         // delete the project before loading the queue back
         testProject.delete();
         q.load();
-        assertEquals(0,q.getItems().length);
+        assertEquals(0, q.getItems().length);
 
         // The counter state should be maintained.
         assertEquals(1, Queue.WaitingItem.getCurrentCounterValue());
@@ -254,7 +255,7 @@ public class QueueTest {
     @Test
     public void queue_id_to_run_mapping() throws Exception {
         FreeStyleProject testProject = r.createFreeStyleProject("test");
-        FreeStyleBuild build = r.assertBuildStatusSuccess(testProject.scheduleBuild2(0));
+        FreeStyleBuild build = r.buildAndAssertSuccess(testProject);
         Assert.assertNotEquals(Run.QUEUE_ID_UNKNOWN, build.getQueueId());
     }
 
@@ -268,7 +269,7 @@ public class QueueTest {
         FreeStyleProject p = r.createFreeStyleProject();
         p.getBuildersList().add(new TestBuilder() {
             @Override
-            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
+            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException {
                 seq.phase(0);   // first, we let one build going
 
                 seq.phase(2);
@@ -277,35 +278,38 @@ public class QueueTest {
         });
 
         Future<FreeStyleBuild> b1 = p.scheduleBuild2(0);
+        assertNotNull(b1);
         seq.phase(1);   // and make sure we have one build under way
 
         // get another going
         Future<FreeStyleBuild> b2 = p.scheduleBuild2(0);
+        assertNotNull(b2);
 
         q.scheduleMaintenance().get();
         Queue.Item[] items = q.getItems();
-        assertEquals(1,items.length);
-        assertTrue("Got "+items[0], items[0] instanceof BlockedItem);
+        assertEquals(1, items.length);
+        assertTrue("Got " + items[0], items[0] instanceof BlockedItem);
 
         q.save();
     }
 
     public static final class FileItemPersistenceTestServlet extends HttpServlet {
         private static final long serialVersionUID = 1L;
-        @Override protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+
+        @Override protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws IOException {
             resp.setContentType("text/html");
             resp.getWriter().println(
                     "<html><body><form action='/' method=post name=main enctype='multipart/form-data'>" +
-                    "<input type=file name=test><input type=submit>"+
+                    "<input type=file name=test><input type=submit>" +
                     "</form></body></html>"
             );
         }
 
-        @Override protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+        @Override protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException {
             try {
                 ServletFileUpload f = new ServletFileUpload(new DiskFileItemFactory());
                 List<?> v = f.parseRequest(req);
-                assertEquals(1,v.size());
+                assertEquals(1, v.size());
                 XStream2 xs = new XStream2();
                 System.out.println(xs.toXML(v.get(0)));
             } catch (FileUploadException e) {
@@ -317,7 +321,7 @@ public class QueueTest {
     @Test public void fileItemPersistence() throws Exception {
         // TODO: write a synchronous connector?
         byte[] testData = new byte[1024];
-        for( int i=0; i<testData.length; i++ )  testData[i] = (byte)i;
+        for (int i = 0; i < testData.length; i++)  testData[i] = (byte) i;
 
 
         Server server = new Server();
@@ -325,7 +329,7 @@ public class QueueTest {
         server.addConnector(connector);
 
         ServletHandler handler = new ServletHandler();
-        handler.addServletWithMapping(new ServletHolder(new FileItemPersistenceTestServlet()),"/");
+        handler.addServletWithMapping(new ServletHolder(new FileItemPersistenceTestServlet()), "/");
         server.setHandler(handler);
 
         server.start();
@@ -335,7 +339,7 @@ public class QueueTest {
             @SuppressWarnings("deprecation")
             HtmlPage p = (HtmlPage) wc.getPage("http://localhost:" + connector.getLocalPort() + '/');
             HtmlForm f = p.getFormByName("main");
-            HtmlFileInput input = (HtmlFileInput) f.getInputByName("test");
+            HtmlFileInput input = f.getInputByName("test");
             input.setData(testData);
             HtmlFormUtil.submit(f);
         } finally {
@@ -353,7 +357,7 @@ public class QueueTest {
         // Make build sleep a while so it blocks new builds
         project.getBuildersList().add(new TestBuilder() {
             @Override
-            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
+            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException {
                 buildStarted.signal();
                 buildShouldComplete.block();
                 return true;
@@ -361,22 +365,22 @@ public class QueueTest {
         });
 
         // Start one build to block others
-        assertTrue(project.scheduleBuild(new UserIdCause()));
+        project.scheduleBuild2(0, new UserIdCause()).waitForStart();
         buildStarted.block(); // wait for the build to really start
 
         // Schedule a new build, and trigger it many ways while it sits in queue
-        Future<FreeStyleBuild> fb = project.scheduleBuild2(0, new UserIdCause());
+        final Future<FreeStyleBuild> fb = project.scheduleBuild2(0, new UserIdCause());
         assertNotNull(fb);
-        assertTrue(project.scheduleBuild(new SCMTriggerCause("")));
-        assertTrue(project.scheduleBuild(new UserIdCause()));
-        assertTrue(project.scheduleBuild(new TimerTriggerCause()));
-        assertTrue(project.scheduleBuild(new RemoteCause("1.2.3.4", "test")));
-        assertTrue(project.scheduleBuild(new RemoteCause("4.3.2.1", "test")));
-        assertTrue(project.scheduleBuild(new SCMTriggerCause("")));
-        assertTrue(project.scheduleBuild(new RemoteCause("1.2.3.4", "test")));
-        assertTrue(project.scheduleBuild(new RemoteCause("1.2.3.4", "foo")));
-        assertTrue(project.scheduleBuild(new SCMTriggerCause("")));
-        assertTrue(project.scheduleBuild(new TimerTriggerCause()));
+        assertNotNull(project.scheduleBuild2(0, new SCMTriggerCause("")));
+        assertNotNull(project.scheduleBuild2(0, new UserIdCause()));
+        assertNotNull(project.scheduleBuild2(0, new TimerTriggerCause()));
+        assertNotNull(project.scheduleBuild2(0, new RemoteCause("1.2.3.4", "test")));
+        assertNotNull(project.scheduleBuild2(0, new RemoteCause("4.3.2.1", "test")));
+        assertNotNull(project.scheduleBuild2(0, new SCMTriggerCause("")));
+        assertNotNull(project.scheduleBuild2(0, new RemoteCause("1.2.3.4", "test")));
+        assertNotNull(project.scheduleBuild2(0, new RemoteCause("1.2.3.4", "foo")));
+        assertNotNull(project.scheduleBuild2(0, new SCMTriggerCause("")));
+        assertNotNull(project.scheduleBuild2(0, new TimerTriggerCause()));
 
         // Wait for 2nd build to finish
         buildShouldComplete.signal();
@@ -386,7 +390,7 @@ public class QueueTest {
         CauseAction ca = build.getAction(CauseAction.class);
         assertNotNull(ca);
         StringBuilder causes = new StringBuilder();
-        for (Cause c : ca.getCauses()) causes.append(c.getShortDescription() + "\n");
+        for (Cause c : ca.getCauses()) causes.append(c.getShortDescription()).append("\n");
         assertEquals("Build causes should have all items, even duplicates",
                 "Started by user SYSTEM\nStarted by user SYSTEM\n"
                 + "Started by an SCM change\nStarted by an SCM change\nStarted by an SCM change\n"
@@ -399,14 +403,13 @@ public class QueueTest {
 
         // View for build should group duplicates
         JenkinsRule.WebClient wc = r.createWebClient();
-        String nl = System.getProperty("line.separator");
-        String buildPage = wc.getPage(build, "").asText().replace(nl," ");
+        String buildPage = wc.getPage(build, "").asNormalizedText();
         assertTrue("Build page should combine duplicates and show counts: " + buildPage,
-                   buildPage.contains("Started by user SYSTEM (2 times) "
-                        + "Started by an SCM change (3 times) "
-                        + "Started by timer (2 times) "
-                        + "Started by remote host 1.2.3.4 with note: test (2 times) "
-                        + "Started by remote host 4.3.2.1 with note: test "
+                   buildPage.contains("Started by user SYSTEM (2 times)\n"
+                        + "Started by an SCM change (3 times)\n"
+                        + "Started by timer (2 times)\n"
+                        + "Started by remote host 1.2.3.4 with note: test (2 times)\n"
+                        + "Started by remote host 4.3.2.1 with note: test\n"
                         + "Started by remote host 1.2.3.4 with note: foo"));
         System.out.println(new XmlFile(new File(build.getRootDir(), "build.xml")).asString());
     }
@@ -415,14 +418,14 @@ public class QueueTest {
     @Test public void flyweightTasks() throws Exception {
         MatrixProject m = r.jenkins.createProject(MatrixProject.class, "p");
         m.addProperty(new ParametersDefinitionProperty(
-                new StringParameterDefinition("FOO","value")
+                new StringParameterDefinition("FOO", "value")
         ));
         if (Functions.isWindows()) {
             m.getBuildersList().add(new BatchFile("ping -n 3 127.0.0.1 >nul"));
         } else {
             m.getBuildersList().add(new Shell("sleep 3"));
         }
-        m.setAxes(new AxisList(new TextAxis("DoesntMatter", "aaa","bbb")));
+        m.setAxes(new AxisList(new TextAxis("DoesntMatter", "aaa", "bbb")));
 
         List<Future<MatrixBuild>> futures = new ArrayList<>();
 
@@ -443,7 +446,7 @@ public class QueueTest {
         r.jenkins.setNumExecutors(0);
         r.jenkins.setNodes(Collections.emptyList());
         MatrixProject m = r.jenkins.createProject(MatrixProject.class, "p");
-        m.setAxes(new AxisList(new LabelAxis("label", Collections.singletonList("remote"))));
+        m.setAxes(new AxisList(new LabelAxis("label", List.of("remote"))));
         MatrixBuild build;
         try {
             build = m.scheduleBuild2(0).get(60, TimeUnit.SECONDS);
@@ -488,7 +491,7 @@ public class QueueTest {
     }
 
     @Issue("JENKINS-41127")
-    @Test public void flyweightTasksUnwantedConcurrency() throws Exception {
+    @Test public void flyweightTasksUnwantedConcurrency() {
         Label label = r.jenkins.getSelfLabel();
         AtomicInteger cnt = new AtomicInteger();
         TestFlyweightTask task1 = new TestFlyweightTask(cnt, label);
@@ -532,7 +535,7 @@ public class QueueTest {
         String tagName = queueItem.getDocumentElement().getTagName();
         assertTrue(tagName.equals("blockedItem") || tagName.equals("buildableItem"));
     }
-    
+
     @Issue("JENKINS-28926")
     @Test
     public void upstreamDownstreamCycle() throws Exception {
@@ -565,19 +568,128 @@ public class QueueTest {
         assertThat("The cycle should have been defanged and chain3 executed", queue.getItem(chain3), nullValue());
     }
 
+
+    @TestExtension({"upstreamProjectsInQueueBlock", "downstreamProjectsInQueueBlock"})
+    public static class BlockingQueueTaskDispatcher extends QueueTaskDispatcher {
+
+        public static final String NAME_OF_BLOCKED_PROJECT = "blocked project";
+
+        @Override
+        public CauseOfBlockage canRun(hudson.model.Queue.Item item) {
+            if (item.task.getOwnerTask().getDisplayName().equals(NAME_OF_BLOCKED_PROJECT)) {
+                return new CauseOfBlockage() {
+
+                    @Override
+                    public String getShortDescription() {
+                        return NAME_OF_BLOCKED_PROJECT + " is permanently blocked.";
+                    }
+
+                };
+            }
+            return super.canRun(item);
+        }
+
+    }
+
+    private void waitUntilWaitingListIsEmpty(Queue q) throws InterruptedException {
+        boolean waitingItemsPresent = true;
+        while (waitingItemsPresent) {
+            waitingItemsPresent = false;
+            for (Queue.Item i : q.getItems()) {
+                if (i instanceof WaitingItem) {
+                    waitingItemsPresent = true;
+                    break;
+                }
+            }
+            Thread.sleep(1000);
+        }
+    }
+
+    @Issue("JENKINS-68780")
+    @Test
+    public void upstreamProjectsInQueueBlock() throws Exception {
+
+       FreeStyleProject a = r.createFreeStyleProject(BlockingQueueTaskDispatcher.NAME_OF_BLOCKED_PROJECT);
+       FreeStyleProject b = r.createFreeStyleProject();
+       a.getPublishersList().add(new BuildTrigger(b.getName(), true));
+       b.setBlockBuildWhenUpstreamBuilding(true);
+
+       r.jenkins.rebuildDependencyGraph();
+
+       a.scheduleBuild(0, new UserIdCause());
+
+       Queue q = r.jenkins.getQueue();
+
+       waitUntilWaitingListIsEmpty(q);
+
+       b.scheduleBuild(0, new UserIdCause());
+
+       waitUntilWaitingListIsEmpty(q);
+
+       // This call is necessary because the queue blocks projects
+       // at first only temporarily. By calling the maintain method
+       // all temporarily blocked projects either become buildable or
+       // become permanently blocked
+       q.scheduleMaintenance().get();
+
+       assertEquals("Queue should contain two blocked items but didn't.", 2, q.getBlockedItems().size());
+
+       //Ensure orderly shutdown
+       q.clear();
+       r.waitUntilNoActivity();
+    }
+
+    @Issue("JENKINS-68780")
+    @Test
+    public void downstreamProjectsInQueueBlock() throws Exception {
+
+       FreeStyleProject a = r.createFreeStyleProject();
+       FreeStyleProject b = r.createFreeStyleProject(BlockingQueueTaskDispatcher.NAME_OF_BLOCKED_PROJECT);
+       a.getPublishersList().add(new BuildTrigger(b.getName(), true));
+       a.setBlockBuildWhenDownstreamBuilding(true);
+
+       r.jenkins.rebuildDependencyGraph();
+
+       b.scheduleBuild(0, new UserIdCause());
+
+       Queue q = r.jenkins.getQueue();
+
+       waitUntilWaitingListIsEmpty(q);
+
+       a.scheduleBuild(0, new UserIdCause());
+
+       waitUntilWaitingListIsEmpty(q);
+
+       // This call is necessary because the queue blocks projects
+       // at first only temporarily. By calling the maintain method
+       // all temporarily blocked projects either become buildable or
+       // become permanently blocked
+       q.scheduleMaintenance().get();
+
+       assertEquals("Queue should contain two blocked items but didn't.", 2, q.getBlockedItems().size());
+
+       //Ensure orderly shutdown
+       q.clear();
+       r.waitUntilNoActivity();
+    }
+
     public static class TestFlyweightTask extends TestTask implements Queue.FlyweightTask {
         Executor exec;
         private final Label assignedLabel;
+
         public TestFlyweightTask(AtomicInteger cnt, Label assignedLabel) {
             super(cnt);
             this.assignedLabel = assignedLabel;
         }
+
         @Override protected void doRun() {
             exec = Executor.currentExecutor();
         }
+
         @Override public Label getAssignedLabel() {
             return assignedLabel;
         }
+
         public Computer getOwner() {
             return exec == null ? null : exec.getOwner();
         }
@@ -595,6 +707,7 @@ public class QueueTest {
         r.waitUntilNoActivity();
         assertEquals(1, cnt.get());
     }
+
     static class TestTask implements Queue.Task {
         private final AtomicInteger cnt;
         boolean isBlocked;
@@ -611,22 +724,53 @@ public class QueueTest {
         @Override public boolean equals(Object o) {
             return o instanceof TestTask && cnt == ((TestTask) o).cnt;
         }
+
         @Override public int hashCode() {
             return cnt.hashCode();
         }
-        @Override public CauseOfBlockage getCauseOfBlockage() {return isBlocked ? CauseOfBlockage.fromMessage(Messages._Queue_Unknown()) : null;}
-        @Override public String getName() {return "test";}
-        @Override public String getFullDisplayName() {return "Test";}
+
+        @Override public CauseOfBlockage getCauseOfBlockage() {
+            return isBlocked ? CauseOfBlockage.fromMessage(Messages._Queue_Unknown()) : null;
+        }
+
+        @Override public String getName() {
+            return "test";
+        }
+
+        @Override public String getFullDisplayName() {
+            return "Test";
+        }
+
         @Override public void checkAbortPermission() {}
-        @Override public boolean hasAbortPermission() {return true;}
-        @Override public String getUrl() {return "test/";}
-        @Override public String getDisplayName() {return "Test";}
-        @Override public ResourceList getResourceList() {return new ResourceList();}
+
+        @Override public boolean hasAbortPermission() {
+            return true;
+        }
+
+        @Override public String getUrl() {
+            return "test/";
+        }
+
+        @Override public String getDisplayName() {
+            return "Test";
+        }
+
+        @Override public ResourceList getResourceList() {
+            return new ResourceList();
+        }
+
         protected void doRun() {}
-        @Override public Executable createExecutable() throws IOException {
+
+        @Override public Executable createExecutable() {
             return new Executable() {
-                @Override public SubTask getParent() {return TestTask.this;}
-                @Override public long getEstimatedDuration() {return -1;}
+                @Override public SubTask getParent() {
+                    return TestTask.this;
+                }
+
+                @Override public long getEstimatedDuration() {
+                    return -1;
+                }
+
                 @Override public void run() {
                     doRun();
                     cnt.incrementAndGet();
@@ -640,7 +784,7 @@ public class QueueTest {
         FreeStyleProject p = r.createFreeStyleProject();
         p.getBuildersList().add(new TestBuilder() {
             @Override
-            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
+            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException {
                 ev.block();
                 return true;
             }
@@ -648,7 +792,7 @@ public class QueueTest {
 
         QueueTaskFuture<FreeStyleBuild> v = p.scheduleBuild2(0);
         FreeStyleBuild b = v.waitForStart();
-        assertEquals(1,b.getNumber());
+        assertEquals(1, b.getNumber());
         assertTrue(b.isBuilding());
         assertSame(p, b.getProject());
 
@@ -662,18 +806,18 @@ public class QueueTest {
      */
     @Test public void accessControl() throws Exception {
         FreeStyleProject p = r.createFreeStyleProject();
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Collections.singletonMap(p.getFullName(), alice)));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Map.of(p.getFullName(), alice)));
         p.getBuildersList().add(new TestBuilder() {
             @Override
-            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
+            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
                 assertEquals(alice2, Jenkins.getAuthentication2());
                 return true;
             }
         });
-        r.assertBuildStatusSuccess(p.scheduleBuild2(0));
+        r.buildAndAssertSuccess(p);
     }
 
-    private static Authentication alice2 = new UsernamePasswordAuthenticationToken("alice","alice", Collections.emptySet());
+    private static Authentication alice2 = new UsernamePasswordAuthenticationToken("alice", "alice", Collections.emptySet());
     private static org.acegisecurity.Authentication alice = org.acegisecurity.Authentication.fromSpring(alice2);
 
 
@@ -689,17 +833,17 @@ public class QueueTest {
         DumbSlave s2 = r.createSlave();
 
         FreeStyleProject p = r.createFreeStyleProject();
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Collections.singletonMap(p.getFullName(), alice)));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Map.of(p.getFullName(), alice)));
         p.getBuildersList().add(new TestBuilder() {
             @Override
-            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
+            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
                 assertEquals(alice2, Jenkins.getAuthentication2());
                 return true;
             }
         });
 
-        final FreeStyleBuild b1 = r.assertBuildStatusSuccess(p.scheduleBuild2(0));
-        final FreeStyleBuild b2 = r.assertBuildStatusSuccess(p.scheduleBuild2(0));
+        final FreeStyleBuild b1 = r.buildAndAssertSuccess(p);
+        final FreeStyleBuild b2 = r.buildAndAssertSuccess(p);
 
         // scheduling algorithm would prefer running the same job on the same node
         // kutzi: 'prefer' != 'enforce', therefore disabled this assertion: assertSame(b1.getBuiltOn(),b2.getBuiltOn());
@@ -707,17 +851,20 @@ public class QueueTest {
         r.jenkins.setAuthorizationStrategy(new AliceCannotBuild(b1.getBuiltOnStr()));
 
         // now that we prohibit alice to do a build on the same node, the build should run elsewhere
-        for (int i=0; i<3; i++) {
-            FreeStyleBuild b3 = r.assertBuildStatusSuccess(p.scheduleBuild2(0));
+        for (int i = 0; i < 3; i++) {
+            FreeStyleBuild b3 = r.buildAndAssertSuccess(p);
             assertNotSame(b3.getBuiltOnStr(), b1.getBuiltOnStr());
         }
     }
+
     private static class AliceCannotBuild extends GlobalMatrixAuthorizationStrategy {
         private final String blocked;
+
         AliceCannotBuild(String blocked) {
             add(Jenkins.ADMINISTER, "anonymous");
             this.blocked = blocked;
         }
+
         @Override
         public ACL getACL(Node node) {
             if (node.getNodeName().equals(blocked)) {
@@ -731,15 +878,15 @@ public class QueueTest {
         }
     }
 
-    @Test public void pendingsConsistenceAfterErrorDuringMaintain() throws IOException, ExecutionException, InterruptedException{
+    @Test public void pendingsConsistenceAfterErrorDuringMaintain() throws IOException, InterruptedException {
         FreeStyleProject project1 = r.createFreeStyleProject();
         FreeStyleProject project2 = r.createFreeStyleProject();
-        TopLevelItemDescriptor descriptor = new TopLevelItemDescriptor(FreeStyleProject.class){
+        TopLevelItemDescriptor descriptor = new TopLevelItemDescriptor(FreeStyleProject.class) {
          @Override
             public FreeStyleProject newInstance(ItemGroup parent, String name) {
-                return new FreeStyleProject(parent,name){
+                return new FreeStyleProject(parent, name) {
                      @Override
-                    public Label getAssignedLabel(){
+                    public Label getAssignedLabel() {
                         throw new IllegalArgumentException("Test exception"); //cause dead of executor
                     }
 
@@ -759,24 +906,24 @@ public class QueueTest {
         projectError.scheduleBuild2(0);
         Executor e = r.jenkins.toComputer().getExecutors().get(0);
         Thread.sleep(2000);
-        while(project2.getLastBuild()==null){
-             if(!e.isAlive()){
+        while (project2.getLastBuild() == null) {
+             if (!e.isAlive()) {
                     break; // executor is dead due to exception
              }
-             if(e.isIdle()){
+             if (e.isIdle()) {
                  assertTrue("Node went to idle before project had" + project2.getDisplayName() + " been started", v.isDone());
              }
                 Thread.sleep(1000);
         }
-        if(project2.getLastBuild()!=null)
+        if (project2.getLastBuild() != null)
             return;
         Queue.getInstance().cancel(projectError); // cancel job which cause dead of executor
-        while(!e.isIdle()){ //executor should take project2 from queue
+        while (!e.isIdle()) { //executor should take project2 from queue
             Thread.sleep(1000);
         }
         //project2 should not be in pendings
         List<Queue.BuildableItem> items = Queue.getInstance().getPendingItems();
-        for(Queue.BuildableItem item : items){
+        for (Queue.BuildableItem item : items) {
             assertNotEquals("Project " + project2.getDisplayName() + " stuck in pendings", item.task.getName(), project2.getName());
         }
     }
@@ -824,7 +971,7 @@ public class QueueTest {
             }
             }, 2, TimeUnit.SECONDS);
 
-        assertThrows(CancellationException.class, () -> f.waitForStart());
+        assertThrows(CancellationException.class, f::waitForStart);
     }
 
     @Ignore("TODO flakes in CI")
@@ -832,32 +979,32 @@ public class QueueTest {
     @Test public void testBlockBuildWhenUpstreamBuildingLock() throws Exception {
         final String prefix = "JENKINS-27871";
         r.getInstance().setNumExecutors(4);
-        
-        final FreeStyleProject projectA = r.createFreeStyleProject(prefix+"A");
+
+        final FreeStyleProject projectA = r.createFreeStyleProject(prefix + "A");
         projectA.getBuildersList().add(new SleepBuilder(5000));
-        
-        final FreeStyleProject projectB = r.createFreeStyleProject(prefix+"B");
-        projectB.getBuildersList().add(new SleepBuilder(10000));     
+
+        final FreeStyleProject projectB = r.createFreeStyleProject(prefix + "B");
+        projectB.getBuildersList().add(new SleepBuilder(10000));
         projectB.setBlockBuildWhenUpstreamBuilding(true);
 
-        final FreeStyleProject projectC = r.createFreeStyleProject(prefix+"C");
+        final FreeStyleProject projectC = r.createFreeStyleProject(prefix + "C");
         projectC.getBuildersList().add(new SleepBuilder(10000));
         projectC.setBlockBuildWhenUpstreamBuilding(true);
-        
-        projectA.getPublishersList().add(new BuildTrigger(Collections.singletonList(projectB), Result.SUCCESS));
-        projectB.getPublishersList().add(new BuildTrigger(Collections.singletonList(projectC), Result.SUCCESS));
-        
+
+        projectA.getPublishersList().add(new BuildTrigger(List.of(projectB), Result.SUCCESS));
+        projectB.getPublishersList().add(new BuildTrigger(List.of(projectC), Result.SUCCESS));
+
         final QueueTaskFuture<FreeStyleBuild> taskA = projectA.scheduleBuild2(0, new TimerTriggerCause());
         Thread.sleep(1000);
         final QueueTaskFuture<FreeStyleBuild> taskB = projectB.scheduleBuild2(0, new TimerTriggerCause());
         final QueueTaskFuture<FreeStyleBuild> taskC = projectC.scheduleBuild2(0, new TimerTriggerCause());
-        
-        final FreeStyleBuild buildA = taskA.get(60, TimeUnit.SECONDS);       
-        final FreeStyleBuild buildB = taskB.get(60, TimeUnit.SECONDS);     
+
+        final FreeStyleBuild buildA = taskA.get(60, TimeUnit.SECONDS);
+        final FreeStyleBuild buildB = taskB.get(60, TimeUnit.SECONDS);
         final FreeStyleBuild buildC = taskC.get(60, TimeUnit.SECONDS);
         long buildBEndTime = buildB.getStartTimeInMillis() + buildB.getDuration();
         assertTrue("Project B build should be finished before the build of project C starts. " +
-                "B finished at " + buildBEndTime + ", C started at " + buildC.getStartTimeInMillis(), 
+                "B finished at " + buildBEndTime + ", C started at " + buildC.getStartTimeInMillis(),
                 buildC.getStartTimeInMillis() >= buildBEndTime);
     }
 
@@ -877,7 +1024,7 @@ public class QueueTest {
         dummyCloud.label = label;
         r.jenkins.clouds.add(dummyCloud);
         matrixProject.setAssignedLabel(label);
-        r.assertBuildStatusSuccess(matrixProject.scheduleBuild2(0));
+        r.buildAndAssertSuccess(matrixProject);
         assertEquals("aws-linux-dummy", matrixProject.getBuilds().getLastBuild().getBuiltOn().getLabelString());
     }
 
@@ -990,8 +1137,8 @@ public class QueueTest {
         FreeStyleProject project = r.createFreeStyleProject("project");
 
         Map<Permission, Set<String>> permissions = new HashMap<>();
-        permissions.put(Item.READ, Collections.singleton("bob"));
-        permissions.put(Item.DISCOVER, Collections.singleton("james"));
+        permissions.put(Item.READ, Set.of("bob"));
+        permissions.put(Item.DISCOVER, Set.of("james"));
         AuthorizationMatrixProperty prop1 = new AuthorizationMatrixProperty(permissions);
         project.addProperty(prop1);
         project.getBuildersList().add(new SleepBuilder(10));
@@ -1006,13 +1153,13 @@ public class QueueTest {
         XmlPage p = webClient.goToXml("queue/api/xml");
 
         //bob has permission on the project and will be able to see it in the queue together with information such as the URL and the name.
-        for (DomNode element: p.getFirstChild().getFirstChild().getChildNodes()){
+        for (DomNode element : p.getFirstChild().getFirstChild().getChildNodes()) {
             if (element.getNodeName().equals("task")) {
-                for (DomNode child: ((DomElement) element).getChildNodes()) {
+                for (DomNode child : ((DomElement) element).getChildNodes()) {
                     if (child.getNodeName().equals("name")) {
-                        assertEquals("project", child.asText());
+                        assertEquals("project", child.asNormalizedText());
                     } else if (child.getNodeName().equals("url")) {
-                        assertNotNull(child.asText());
+                        assertNotNull(child.asNormalizedText());
                     }
                 }
             }
@@ -1084,6 +1231,7 @@ public class QueueTest {
     @TestExtension("load_queue_xml")
     public static final class QueueSaveSniffer extends SaveableListener {
         private static int count = 0;
+
         @Override public void onChange(Saveable o, XmlFile file) {
             if (o instanceof Queue) {
                 count++;
@@ -1124,7 +1272,7 @@ public class QueueTest {
         assertThat(q.getItems().length, equalTo(0));
 
         FreeStyleProject testProject = r.createFreeStyleProject("test");
-        testProject.scheduleBuild(new UserIdCause());
+        assertNotNull(testProject.scheduleBuild2(0, new UserIdCause()));
 
         Queue.Item[] items = q.getItems();
         assertThat(items.length, equalTo(1));
@@ -1138,7 +1286,7 @@ public class QueueTest {
                     .withRedirectEnabled(false)
                     .withThrowExceptionOnFailingStatusCode(false);
             wc.login("user");
-            if(legacyRedirect) {
+            if (legacyRedirect) {
                 Page p = wc.getPage(request);
                 // the legacy endpoint returns a redirection to the previously visited page, none in our case
                 // (so force no redirect to avoid false positive error)
@@ -1240,7 +1388,7 @@ public class QueueTest {
         DomElement buildQueue = page.getElementById("buildQueue");
         DomNodeList<HtmlElement> anchors = buildQueue.getElementsByTagName("a");
         HtmlAnchor anchorWithTooltip = (HtmlAnchor) anchors.stream()
-                .filter(a -> StringUtils.isNotEmpty(a.getAttribute("tooltip")))
+                .filter(a -> a.getAttribute("tooltip") != null && !a.getAttribute("tooltip").isEmpty())
                 .findFirst().orElseThrow(IllegalStateException::new);
 
         String tooltip = anchorWithTooltip.getAttribute("tooltip");
@@ -1251,24 +1399,30 @@ public class QueueTest {
         public BrokenAffinityKeyProject(ItemGroup parent, String name) {
             super(parent, name);
         }
+
         @Override
         public String getAffinityKey() {
             throw new NullPointerException("oops!");
         }
+
         @Override
         protected Class<BrokenAffinityKeyBuild> getBuildClass() {
             return BrokenAffinityKeyBuild.class;
         }
+
         @Override
         public TopLevelItemDescriptor getDescriptor() {
             return ExtensionList.lookupSingleton(DescriptorImpl.class);
         }
+
         @TestExtension("brokenAffinityKey")
         public static class DescriptorImpl extends AbstractProjectDescriptor {
             @Override
             public TopLevelItem newInstance(ItemGroup parent, String name) {
                 return new BrokenAffinityKeyProject(parent, name);
             }
+
+            @NonNull
             @Override
             public String getDisplayName() {
                 return "Broken Affinity Key Project";
@@ -1280,9 +1434,11 @@ public class QueueTest {
         public BrokenAffinityKeyBuild(BrokenAffinityKeyProject project) throws IOException {
             super(project);
         }
+
         public BrokenAffinityKeyBuild(BrokenAffinityKeyProject project, File buildDir) throws IOException {
             super(project, buildDir);
         }
+
         @Override
         public void run() {
             execute(new BuildExecution());
