@@ -32,7 +32,7 @@ import hudson.model.RunParameterDefinition.RunParameterFilter;
 import hudson.tasks.BuildStepMonitor;
 import hudson.tasks.Publisher;
 import hudson.util.LogTaskListener;
-import java.util.Collections;
+import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import org.junit.Rule;
@@ -63,9 +63,9 @@ public class RunParameterDefinitionTest {
         MockFolder dir = j.createFolder("dir");
         MockFolder subdir = dir.createProject(MockFolder.class, "sub dir");
         FreeStyleProject p = subdir.createProject(FreeStyleProject.class, "some project");
-        p.scheduleBuild2(0).get();
-        FreeStyleBuild build2 = p.scheduleBuild2(0).get();
-        p.scheduleBuild2(0).get();
+        j.buildAndAssertSuccess(p);
+        FreeStyleBuild build2 = j.buildAndAssertSuccess(p);
+        j.buildAndAssertSuccess(p);
         String id = build2.getExternalizableId();
         assertEquals("dir/sub dir/some project#2", id);
         assertEquals(build2, Run.fromExternalizableId(id));
@@ -91,165 +91,51 @@ public class RunParameterDefinitionTest {
     public void testNULLFilter() throws Exception {
 
         FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.UNSTABLE)));
-        FreeStyleBuild unstableBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.UNSTABLE)));
+        FreeStyleBuild unstableBuild = j.buildAndAssertStatus(Result.UNSTABLE, project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.FAILURE)));
-        FreeStyleBuild failedBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.FAILURE)));
+        FreeStyleBuild failedBuild = j.buildAndAssertStatus(Result.FAILURE, project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.NOT_BUILT)));
-        FreeStyleBuild notBuiltBuild = project.scheduleBuild2(0).get();
-        
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.ABORTED)));
-        FreeStyleBuild abortedBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.NOT_BUILT)));
+        FreeStyleBuild notBuiltBuild = j.buildAndAssertStatus(Result.NOT_BUILT, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.ABORTED)));
+        FreeStyleBuild abortedBuild = j.buildAndAssertStatus(Result.ABORTED, project);
 
         FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
-        ParametersDefinitionProperty pdp = 
-                new ParametersDefinitionProperty(new RunParameterDefinition("RUN", 
+        ParametersDefinitionProperty pdp =
+                new ParametersDefinitionProperty(new RunParameterDefinition("RUN",
                                                                              project.getName(),
                                                                              "run description",
                                                                              null));
         paramProject.addProperty(pdp);
 
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
         assertEquals(Integer.toString(project.getLastBuild().getNumber()),
                      build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
     }
 
-    
+
     @Test
     public void testALLFilter() throws Exception {
 
         FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.UNSTABLE)));
-        FreeStyleBuild unstableBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.UNSTABLE)));
+        FreeStyleBuild unstableBuild = j.buildAndAssertStatus(Result.UNSTABLE, project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.FAILURE)));
-        FreeStyleBuild failedBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.FAILURE)));
+        FreeStyleBuild failedBuild = j.buildAndAssertStatus(Result.FAILURE, project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.NOT_BUILT)));
-        FreeStyleBuild notBuiltBuild = project.scheduleBuild2(0).get();
-        
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.ABORTED)));
-        FreeStyleBuild abortedBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.NOT_BUILT)));
+        FreeStyleBuild notBuiltBuild = j.buildAndAssertStatus(Result.NOT_BUILT, project);
 
-        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
-        ParametersDefinitionProperty pdp = 
-                new ParametersDefinitionProperty(new RunParameterDefinition("RUN", 
-                                                                             project.getName(),
-                                                                             "run description",
-                                                                             RunParameterFilter.ALL));
-        paramProject.addProperty(pdp);
-
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
-        assertEquals(Integer.toString(project.getLastBuild().getNumber()),
-                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
-    }
-
-    @Test
-    public void testCOMPLETEDFilter() throws Exception {
-
-        FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.UNSTABLE)));
-        FreeStyleBuild unstableBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.FAILURE)));
-        FreeStyleBuild failedBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.NOT_BUILT)));
-        FreeStyleBuild notBuiltBuild = project.scheduleBuild2(0).get();
-        
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.ABORTED)));
-        FreeStyleBuild abortedBuild = project.scheduleBuild2(0).get();
-
-        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
-        ParametersDefinitionProperty pdp = 
-                new ParametersDefinitionProperty(new RunParameterDefinition("RUN", 
-                                                                             project.getName(),
-                                                                             "run description",
-                                                                             RunParameterFilter.COMPLETED));
-        paramProject.addProperty(pdp);
-
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
-        assertEquals(Integer.toString(abortedBuild.getNumber()),
-                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
-    }
-    
-    @Test
-    public void testSUCCESSFULFilter() throws Exception {
-
-        FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.UNSTABLE)));
-        FreeStyleBuild unstableBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.FAILURE)));
-        FreeStyleBuild failedBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.NOT_BUILT)));
-        FreeStyleBuild notBuiltBuild = project.scheduleBuild2(0).get();
-        
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.ABORTED)));
-        FreeStyleBuild abortedBuild = project.scheduleBuild2(0).get();
-
-        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
-        ParametersDefinitionProperty pdp = 
-                new ParametersDefinitionProperty(new RunParameterDefinition("RUN", 
-                                                                             project.getName(),
-                                                                             "run description",
-                                                                             RunParameterFilter.SUCCESSFUL));
-        paramProject.addProperty(pdp);
-
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
-        assertEquals(Integer.toString(unstableBuild.getNumber()),
-                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
-    }
-    
-    
-    @Test
-    public void testSTABLEFilter() throws Exception {
-
-        FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.UNSTABLE)));
-        FreeStyleBuild unstableBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.FAILURE)));
-        FreeStyleBuild failedBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.NOT_BUILT)));
-        FreeStyleBuild notBuiltBuild = project.scheduleBuild2(0).get();
-        
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.ABORTED)));
-        FreeStyleBuild abortedBuild = project.scheduleBuild2(0).get();
-
-        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
-        ParametersDefinitionProperty pdp = 
-                new ParametersDefinitionProperty(new RunParameterDefinition("RUN", 
-                                                                             project.getName(),
-                                                                             "run description",
-                                                                             RunParameterFilter.STABLE));
-        paramProject.addProperty(pdp);
-
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
-        assertEquals(Integer.toString(successfulBuild.getNumber()),
-                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
-    }
-    
-    
-    @Test
-    public void testLoadEnvironmentVariablesWhenRunParameterJobHasBeenDeleted() throws Exception {
-
-        FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.ABORTED)));
+        FreeStyleBuild abortedBuild = j.buildAndAssertStatus(Result.ABORTED, project);
 
         FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
         ParametersDefinitionProperty pdp =
@@ -259,7 +145,121 @@ public class RunParameterDefinitionTest {
                                                                              RunParameterFilter.ALL));
         paramProject.addProperty(pdp);
 
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
+        assertEquals(Integer.toString(project.getLastBuild().getNumber()),
+                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
+    }
+
+    @Test
+    public void testCOMPLETEDFilter() throws Exception {
+
+        FreeStyleProject project = j.createFreeStyleProject("project");
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.UNSTABLE)));
+        FreeStyleBuild unstableBuild = j.buildAndAssertStatus(Result.UNSTABLE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.FAILURE)));
+        FreeStyleBuild failedBuild = j.buildAndAssertStatus(Result.FAILURE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.NOT_BUILT)));
+        FreeStyleBuild notBuiltBuild = j.buildAndAssertStatus(Result.NOT_BUILT, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.ABORTED)));
+        FreeStyleBuild abortedBuild = j.buildAndAssertStatus(Result.ABORTED, project);
+
+        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
+        ParametersDefinitionProperty pdp =
+                new ParametersDefinitionProperty(new RunParameterDefinition("RUN",
+                                                                             project.getName(),
+                                                                             "run description",
+                                                                             RunParameterFilter.COMPLETED));
+        paramProject.addProperty(pdp);
+
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
+        assertEquals(Integer.toString(abortedBuild.getNumber()),
+                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
+    }
+
+    @Test
+    public void testSUCCESSFULFilter() throws Exception {
+
+        FreeStyleProject project = j.createFreeStyleProject("project");
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.UNSTABLE)));
+        FreeStyleBuild unstableBuild = j.buildAndAssertStatus(Result.UNSTABLE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.FAILURE)));
+        FreeStyleBuild failedBuild = j.buildAndAssertStatus(Result.FAILURE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.NOT_BUILT)));
+        FreeStyleBuild notBuiltBuild = j.buildAndAssertStatus(Result.NOT_BUILT, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.ABORTED)));
+        FreeStyleBuild abortedBuild = j.buildAndAssertStatus(Result.ABORTED, project);
+
+        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
+        ParametersDefinitionProperty pdp =
+                new ParametersDefinitionProperty(new RunParameterDefinition("RUN",
+                                                                             project.getName(),
+                                                                             "run description",
+                                                                             RunParameterFilter.SUCCESSFUL));
+        paramProject.addProperty(pdp);
+
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
+        assertEquals(Integer.toString(unstableBuild.getNumber()),
+                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
+    }
+
+
+    @Test
+    public void testSTABLEFilter() throws Exception {
+
+        FreeStyleProject project = j.createFreeStyleProject("project");
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.UNSTABLE)));
+        FreeStyleBuild unstableBuild = j.buildAndAssertStatus(Result.UNSTABLE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.FAILURE)));
+        FreeStyleBuild failedBuild = j.buildAndAssertStatus(Result.FAILURE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.NOT_BUILT)));
+        FreeStyleBuild notBuiltBuild = j.buildAndAssertStatus(Result.NOT_BUILT, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.ABORTED)));
+        FreeStyleBuild abortedBuild = j.buildAndAssertStatus(Result.ABORTED, project);
+
+        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
+        ParametersDefinitionProperty pdp =
+                new ParametersDefinitionProperty(new RunParameterDefinition("RUN",
+                                                                             project.getName(),
+                                                                             "run description",
+                                                                             RunParameterFilter.STABLE));
+        paramProject.addProperty(pdp);
+
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
+        assertEquals(Integer.toString(successfulBuild.getNumber()),
+                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
+    }
+
+
+    @Test
+    public void testLoadEnvironmentVariablesWhenRunParameterJobHasBeenDeleted() throws Exception {
+
+        FreeStyleProject project = j.createFreeStyleProject("project");
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
+
+        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
+        ParametersDefinitionProperty pdp =
+                new ParametersDefinitionProperty(new RunParameterDefinition("RUN",
+                                                                             project.getName(),
+                                                                             "run description",
+                                                                             RunParameterFilter.ALL));
+        paramProject.addProperty(pdp);
+
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
         assertEquals(Integer.toString(project.getLastBuild().getNumber()),
                      build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
 
@@ -290,7 +290,7 @@ public class RunParameterDefinitionTest {
 
         @Override
         public Descriptor<Publisher> getDescriptor() {
-            return new Descriptor<Publisher>(ResultPublisher.class) {};
+            return new Descriptor<>(ResultPublisher.class) {};
         }
     }
 }
